# x87sidecar

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
aotinvoke/: CMakeLists.txt
aotinvoke/src/: RosettaAotApi.cpp  main.cpp
benchmarks/: CMakeLists.txt  bench_add.c  bench_compare.c  bench_constants.c  bench_div.c  bench_dot_product.c  bench_f2xm1.c  bench_fbld.c  bench_fbstp.c  bench_fclex.c  bench_fcmov.c  bench_fcos.c  bench_fdecstp.c  bench_fdisi_feni.c  bench_ffree.c  bench_fincstp.c  bench_finit.c  bench_fistp_multi.c  bench_fistt.c  bench_fldenv.c  bench_fnop.c  bench_fpatan.c  bench_fprem.c  bench_fprem1.c  bench_fptan.c  bench_frstor.c  bench_fsave.c  bench_fscale.c  bench_fsin.c  bench_fsincos.c  bench_fst_chain.c  bench_fstenv.c  bench_fstp_fld.c  bench_fusion_arith_faddp.c  bench_fusion_arith_fstp.c  bench_fusion_arithp_fld.c  bench_fusion_arithp_fstp.c  bench_fusion_fcom_fstsw.c  bench_fusion_fld_arith.c  bench_fusion_fld_arith_arithp.c  (+24 more)
benchmarks/macro/: CMakeLists.txt  mmo.c
cmake/: AddX86Sample.cmake
docs/investigations/: ci-flaky-sigtrap-attach.md
rosetta_config/: CMakeLists.txt
rosetta_config/include/rosetta_config/: Config.h
rosetta_config/src/: Config.cpp
rosetta_core/: CMakeLists.txt
rosetta_core/include/rosetta_core/: AssemblerHelpers.hpp  Config.h  ConfigCli.h  ConfigEnv.h  CustomTranslationHook.h  IRInstr.h  Opcode.h  OpcodeCompatibility.h  Opcode_26_4.h  ProfileFormat.h  ProfileRuntime.h  Register.h  RosettaCore.h  RuntimeLibC.h  TranscendentalHelper.h  TranslatorHelpers.hpp  TranslatorX87.h  TranslatorX87F80.hpp  TranslatorX87Helpers.hpp  TranslatorX87Transcendental.hpp  X87Bridge.h  X87Cache.h  X87IR.h
rosetta_core/src/: AssemblerBuffer.cpp  AssemblerHelpers.cpp  ConfigCli.cpp  ConfigEnv.cpp  CoreLog.cpp  CustomTranslationHook.cpp  IRInstr.cpp  Opcode.cpp  OpcodeCompatibility.cpp  ProfileRuntime.cpp  RosettaCore.cpp  RuntimeLibC.cpp  TranscendentalHelper.cpp  Translator.cpp  TranslatorHelpers.cpp  TranslatorX87.cpp  TranslatorX87F80.cpp  TranslatorX87Fusion.cpp  TranslatorX87Helpers.cpp  TranslatorX87Internal.hpp  TranslatorX87Single.cpp  TranslatorX87Transcendental.cpp  X87Cache.cpp  X87IRBuild.cpp  X87IRLower.cpp  X87IROptimize.cpp  hook.cpp
rosetta_loader/: CMakeLists.txt
rosetta_loader/src/: cli_args.cpp  cli_args.hpp  coop_proto.h  mach_exception.cpp  mach_exception.hpp  macho_loader.cpp  macho_loader.hpp  main.cpp  offset_finder.cpp  offset_finder.hpp  sidecar.cpp  sidecar.hpp  stub_asm.cpp  stub_asm.hpp
scripts/: inspect_function.sh  run_benchmarks.sh  run_fusion_sweep.sh  run_opcode_sweep.sh  run_tests.sh
tests/: CMakeLists.txt  coop_handshake.c  test_arith.c  test_arith_faddp.c  test_arithp_fld.c  test_arithp_fstp.c  test_bridge_alu.c  test_bridge_flags.c  test_bridge_lea.c  test_bridge_mov.c  test_compare_unary.c  test_deep_stack.c  test_f2xm1.c  test_fbld.c  test_fbstp.c  test_fclex.c  test_fclex_compose.c  test_fcmov.c  test_fcom.c  test_fcom_nzcv.c  test_fcomi.c  test_fcomp_mem.c  test_fcos.c  test_fdecstp.c  test_fdisi_feni.c  test_ffree.c  test_ficom.c  test_fild.c  test_fincstp.c  test_finit.c  test_finit_compose.c  test_fistp_multi.c  test_fistt.c  test_flags_across_x87.c  test_fld.c  test_fld_arith.c  test_fld_arith_arithp_fma.c  test_fld_fst.c  test_fld_m80fp.c  test_fldconst.c  (+48 more)
tests/data/: geom_block_874c40.ir
tools/: CMakeLists.txt  ir_pressure_replay.cpp  profile_analyze.cpp  rollback_diff.cpp
