cmake_minimum_required(VERSION 3.20)

project(rosetta_aot CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
foreach(cfg IN ITEMS Debug Release RelWithDebInfo MinSizeRel)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${cfg} "${CMAKE_BINARY_DIR}/bin")
endforeach()

add_subdirectory(rosetta_config)
add_subdirectory(rosetta_core)
add_subdirectory(rosetta_loader)

add_subdirectory(aotinvoke)
add_subdirectory(tests)
add_subdirectory(benchmarks)
