set(X86_SAMPLE_OUTPUT_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bench")

add_x86_sample(bench_constants)
add_x86_sample(bench_load)
add_x86_sample(bench_add)
add_x86_sample(bench_sub)
add_x86_sample(bench_mul)
add_x86_sample(bench_div)
add_x86_sample(bench_store)
add_x86_sample(bench_compare)
add_x86_sample(bench_unary)
add_x86_sample(bench_fcmov)
add_x86_sample(bench_fusion_fld_arithp)
add_x86_sample(bench_fusion_fld_fstp)
add_x86_sample(bench_fusion_fld_arith_fstp)
add_x86_sample(bench_fusion_fld_fcomp_fstsw)
add_x86_sample(bench_fusion_fxch_arithp)
add_x86_sample(bench_fusion_fxch_fstp)
add_x86_sample(bench_fusion_fcom_fstsw)
add_x86_sample(bench_fusion_arithp_fstp)
add_x86_sample(bench_fusion_arith_fstp)
add_x86_sample(bench_fusion_arith_faddp)
add_x86_sample(bench_fusion_fld_arith_arithp)
add_x86_sample(bench_fstp_fld)
add_x86_sample(bench_round)
add_x86_sample(bench_fxch)
add_x86_sample(bench_fistt)
add_x86_sample(bench_tag_batch)
add_x86_sample(bench_fistp_multi)
add_x86_sample(bench_fbld)
add_x86_sample(bench_fclex)
add_x86_sample(bench_fdecstp)
add_x86_sample(bench_fincstp)
add_x86_sample(bench_ffree)
add_x86_sample(bench_fdisi_feni)
add_x86_sample(bench_fxtract)
add_x86_sample(bench_fscale)
add_x86_sample(bench_finit)
add_x86_sample(bench_fbstp)

add_subdirectory(macro)
