set(X86_SAMPLE_OUTPUT_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bench")
set(X86_SAMPLE_EXTRA_DEPS "${CMAKE_CURRENT_SOURCE_DIR}/bench_timing.h")

add_x86_sample(bench_constants)
add_x86_sample(bench_load)
add_x86_sample(bench_add)
add_x86_sample(bench_sub)
add_x86_sample(bench_mul)
add_x86_sample(bench_div)
add_x86_sample(bench_store)
add_x86_sample(bench_compare)
add_x86_sample(bench_unary)
add_x86_sample(bench_fcmov)
add_x86_sample(bench_fusion_fld_arithp)
add_x86_sample(bench_fusion_fld_fstp)
add_x86_sample(bench_fusion_fld_arith_fstp)
add_x86_sample(bench_fusion_fld_fcomp_fstsw)
add_x86_sample(bench_fusion_fxch_arithp)
add_x86_sample(bench_fusion_fxch_fstp)
add_x86_sample(bench_fusion_fcom_fstsw)
add_x86_sample(bench_fusion_arithp_fstp)
add_x86_sample(bench_fusion_arith_fstp)
add_x86_sample(bench_fusion_arith_faddp)
add_x86_sample(bench_fusion_fld_arith_arithp)
add_x86_sample(bench_fstp_fld)
add_x86_sample(bench_round)
add_x86_sample(bench_fxch)
add_x86_sample(bench_fistt)
add_x86_sample(bench_tag_batch)
add_x86_sample(bench_fistp_multi)
add_x86_sample(bench_fbld)
add_x86_sample(bench_fclex)
add_x86_sample(bench_fdecstp)
add_x86_sample(bench_fincstp)
add_x86_sample(bench_ffree)
add_x86_sample(bench_fdisi_feni)
add_x86_sample(bench_fnop)
add_x86_sample(bench_fxtract)
add_x86_sample(bench_fscale)
add_x86_sample(bench_finit)
add_x86_sample(bench_fbstp)
add_x86_sample(bench_fldenv)
add_x86_sample(bench_fstenv)
add_x86_sample(bench_frstor)
add_x86_sample(bench_fsave)
add_x86_sample(bench_fxsave)
add_x86_sample(bench_fxrstor)
add_x86_sample(bench_fsin)
add_x86_sample(bench_fcos)
add_x86_sample(bench_f2xm1)
add_x86_sample(bench_fpatan)
add_x86_sample(bench_fsincos)
add_x86_sample(bench_fptan)
add_x86_sample(bench_fyl2x)
add_x86_sample(bench_fyl2xp1)
add_x86_sample(bench_fprem)
add_x86_sample(bench_fprem1)

add_subdirectory(macro)
